--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "pandemic-clone",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -11,7 +11,7 @@
     "debug": "node --inspect node_modules/.bin/jest --runInBand"
   },
   "keywords": [],
-  "author": "",
+  "author": "Daniel Merys & Tyler Bates",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.4",
